objects/Crossobject__c.object
<CustomObject>
    <description>#Sales #Sprint12

multi-purpose object that allows you to configure templates of particular use such as content configurations of SMS, EMAILS, etc. and also allows you to track the sending and reply transactions of SMS, EMAILs, etc.

It has generic fields of type text, number and date which are added to several types of record types which are complemented with two fields of type pick list, thus a record type of type SMS can be combined with a sub value of type &quot;decision line&quot;</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field determines the relationship with the Account object.</description>
        <inlineHelpText>this field determines the relationship with the Account object.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cross Objects</relationshipLabel>
        <relationshipName>Cross_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field determines the relationship with the Case object.</description>
        <inlineHelpText>this field determines the relationship with the Case object.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cross Objects</relationshipLabel>
        <relationshipName>Cross_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checkbox1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>generic checkbox field type</description>
        <inlineHelpText>generic checkbox field type</inlineHelpText>
        <label>Checkbox1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact</description>
        <inlineHelpText>Lookup to Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cross Objects</relationshipLabel>
        <relationshipName>Cross_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CrossObjectName__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <description>generic date field type</description>
        <inlineHelpText>generic date field type</inlineHelpText>
        <label>Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date2__c</fullName>
        <description>generic date field type</description>
        <inlineHelpText>generic date field type</inlineHelpText>
        <label>Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTime1__c</fullName>
        <label>DateTime 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime2__c</fullName>
        <label>DateTime 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime3__c</fullName>
        <label>DateTime 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <description>generic email field type</description>
        <inlineHelpText>generic email field type</inlineHelpText>
        <label>Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Integer1__c</fullName>
        <description>generic integer field type</description>
        <inlineHelpText>generic integer field type</inlineHelpText>
        <label>Integer 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integer2__c</fullName>
        <description>generic integer field type</description>
        <inlineHelpText>generic integer field type</inlineHelpText>
        <label>Integer 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integer3__c</fullName>
        <description>generic integer field type</description>
        <inlineHelpText>generic integer field type</inlineHelpText>
        <label>Integer 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarkForDeletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field represent of mark for deletion record</description>
        <inlineHelpText>field represent of mark for deletion record</inlineHelpText>
        <label>Mark for deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field determines the relationship with the Order object.</description>
        <inlineHelpText>this field determines the relationship with the Order object.</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cross Objects</relationshipLabel>
        <relationshipName>Cross_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone1__c</fullName>
        <description>generic phone field type</description>
        <inlineHelpText>generic phone field type</inlineHelpText>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist1__c</fullName>
        <description>field of type list that is related and filtered with the record type of the object</description>
        <inlineHelpText>field of type list that is related and filtered with the record type of the object</inlineHelpText>
        <label>Picklist 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verificación de Línea Decisora</fullName>
                </value>
                <value>
                    <fullName>Verificación de identidad en una orden de venta</fullName>
                </value>
                <value>
                    <fullName>Vencimiento de plazo de permanencia</fullName>
                </value>
                <value>
                    <fullName>Q&amp;A</fullName>
                </value>
                <value>
                    <fullName>Sms</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Vencimiento de Pickup</fullName>
                </value>
                <value>
                    <fullName>Detalles de Pickup</fullName>
                </value>
                <value>
                    <fullName>Error de nominacion</fullName>
                </value>
                <value>
                    <fullName>Nominacion exitosa</fullName>
                </value>
                <value>
                    <fullName>Recarga Exitosa</fullName>
                </value>
                <value>
                    <fullName>Cambio Numeros Amigos Ok</fullName>
                </value>
                <value>
                    <fullName>Renovacion de datos Exitosa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist2__c</fullName>
        <description>field of type list that represents the type of message</description>
        <inlineHelpText>field of type list that represents the type of message</inlineHelpText>
        <label>Picklist 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solo notificacion</fullName>
                </value>
                <value>
                    <fullName>Requiere respuesta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
                <value>
                    <fullName>Cerrado</fullName>
                </value>
                <value>
                    <fullName>Confirmado</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
                <value>
                    <fullName>Fallo Envio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>String1__c</fullName>
        <description>generic string field type</description>
        <inlineHelpText>generic string field type</inlineHelpText>
        <label>String 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>String2__c</fullName>
        <description>generic string field type</description>
        <inlineHelpText>generic string field type</inlineHelpText>
        <label>String 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>String3__c</fullName>
        <description>generic string field type</description>
        <inlineHelpText>generic string field type</inlineHelpText>
        <label>String 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextArea__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <label>Cross Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Picklist1__c</columns>
        <columns>Picklist2__c</columns>
        <columns>MarkForDeletion__c</columns>
        <columns>TextArea__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SMS_Template</fullName>
        <columns>NAME</columns>
        <columns>Picklist1__c</columns>
        <columns>Picklist2__c</columns>
        <columns>String1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Crossobject__c.SMSTemplate</value>
        </filters>
        <label>SMS Template</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SMS_Tracking</fullName>
        <columns>NAME</columns>
        <columns>Picklist1__c</columns>
        <columns>Picklist2__c</columns>
        <columns>String1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Crossobject__c.SMSTracking</value>
        </filters>
        <label>SMS Tracking</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CO-{00000000}</displayFormat>
        <label>Crossobject Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross Objects</pluralLabel>
    <recordTypes>
        <fullName>Account_Attribute</fullName>
        <active>false</active>
        <description>Account Attribute</description>
        <label>Account Attribute</label>
    </recordTypes>
    <recordTypes>
        <fullName>EmailTemplate</fullName>
        <active>true</active>
        <label>Email Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>EmailToSend</fullName>
        <active>true</active>
        <label>Email to send</label>
    </recordTypes>
    <recordTypes>
        <fullName>EmailTracking</fullName>
        <active>true</active>
        <label>Email Tracking</label>
    </recordTypes>
    <recordTypes>
        <fullName>ExternalChannel</fullName>
        <active>true</active>
        <description>External Channel</description>
        <label>External Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Log_Identity_Validation</fullName>
        <active>true</active>
        <label>Log Identity Validation</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMSAdministrator</fullName>
        <active>true</active>
        <description>Mensajes para Marketing Cloud</description>
        <label>SMS Administrator</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMSTemplate</fullName>
        <active>true</active>
        <label>SMS Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMSTracking</fullName>
        <active>true</active>
        <label>SMS Tracking</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SMSTemplate_TextoLargo</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;SMSTemplate&apos; &amp;&amp; LEN(String1__c) &gt; 100</errorConditionFormula>
        <errorMessage>El texto del mensaje no puede exceder los 100 caracteres.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMSTemplate_VigenciaDesde</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;SMSTemplate&apos; &amp;&amp;  Date1__c &lt; TODAY()</errorConditionFormula>
        <errorMessage>La fecha Vigencia Desde no puede ser menor a hoy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMSTemplate_VigenciaHasta</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;SMSTemplate&apos; &amp;&amp; OR(Date1__c &lt; TODAY(), Date2__c &lt; Date1__c)</errorConditionFormula>
        <errorMessage>La fecha Vigencia Desde no puede ser menor a hoy ni menor a la fecha Vigencia Desde</errorMessage>
    </validationRules>
</CustomObject>